--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "laracasts/generators": "master-dev"
     },
+
+
     "autoload": {
         "classmap": [
             "database"
