--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
     "cross-env": "^3.2.3",
     "jquery": "^3.1.1",
     "laravel-mix": "^0.8.3",
+    "laravel-elixir": "*",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-ruby-sass": "^2.1.1",
+    "moment": "^2.18.1"
   }
 }
