--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "hesto/multi-auth": "^1.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4"
+        "laravelcollective/html": "^5.4",
+        "webpatser/laravel-countries": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
